deploy: 7e4de1a03c44bfa717c25d20b82721e536e02267

--- a/_modules/copyxnat/xnat/xml_cleaner.html
+++ b/_modules/copyxnat/xnat/xml_cleaner.html
@@ -50,6 +50,7 @@
 <div class="viewcode-block" id="XnatType"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType">[docs]</a><span class="k">class</span> <span class="nc">XnatType</span><span class="p">(</span><span class="n">Enum</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Describe the type of XNAT item so cleaning can be performed&quot;&quot;&quot;</span>
 
+    <span class="n">server</span> <span class="o">=</span> <span class="s1">&#39;server&#39;</span>
     <span class="n">project</span> <span class="o">=</span> <span class="s1">&#39;project&#39;</span>
     <span class="n">subject</span> <span class="o">=</span> <span class="s1">&#39;subject&#39;</span>
     <span class="n">experiment</span> <span class="o">=</span> <span class="s1">&#39;experiment&#39;</span>
