--- a/copyxnat.commands.show_command.html
+++ b/copyxnat.commands.show_command.html
@@ -17,7 +17,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="copyxnat.pyreporter package" href="copyxnat.pyreporter.html" />
-    <link rel="prev" title="copyxnat.commands.find_commands module" href="copyxnat.commands.find_commands.html" /> 
+    <link rel="prev" title="copyxnat.commands.ohif_command module" href="copyxnat.commands.ohif_command.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
       <h3>Navigation</h3>
@@ -32,7 +32,7 @@
           <a href="copyxnat.pyreporter.html" title="copyxnat.pyreporter package"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.commands.find_commands.html" title="copyxnat.commands.find_commands module"
+          <a href="copyxnat.commands.ohif_command.html" title="copyxnat.commands.ohif_command module"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
@@ -112,8 +112,8 @@
               <img class="logo" src="_static/project-icon.png" alt="Logo"/>
             </a></p>
   <h4>Previous topic</h4>
-  <p class="topless"><a href="copyxnat.commands.find_commands.html"
-                        title="previous chapter">copyxnat.commands.find_commands module</a></p>
+  <p class="topless"><a href="copyxnat.commands.ohif_command.html"
+                        title="previous chapter">copyxnat.commands.ohif_command module</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="copyxnat.pyreporter.html"
                         title="next chapter">copyxnat.pyreporter package</a></p>
@@ -151,7 +151,7 @@
           <a href="copyxnat.pyreporter.html" title="copyxnat.pyreporter package"
              >next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.commands.find_commands.html" title="copyxnat.commands.find_commands module"
+          <a href="copyxnat.commands.ohif_command.html" title="copyxnat.commands.ohif_command module"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
