--- a/genindex.html
+++ b/genindex.html
@@ -94,6 +94,8 @@
 </li>
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.CACHE_TYPE">(copyxnat.commands.export_command.ExportCommand attribute)</a>
 </li>
+        <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.CACHE_TYPE">(copyxnat.commands.ohif_command.OhifCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.CACHE_TYPE">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
       </ul></li>
@@ -118,6 +120,8 @@
 </li>
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.COMMAND_LINE">(copyxnat.commands.export_command.ExportCommand attribute)</a>
 </li>
+        <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.COMMAND_LINE">(copyxnat.commands.ohif_command.OhifCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.COMMAND_LINE">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
       </ul></li>
@@ -128,6 +132,8 @@
       <li><a href="copyxnat.commands.find_commands.html#copyxnat.commands.find_commands.commands">commands() (in module copyxnat.commands.find_commands)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.complete_progress">complete_progress() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
+</li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.copy">copy() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache">CopyCache (class in copyxnat.xnat.copy_cache)</a>
 </li>
@@ -176,6 +182,13 @@
 </li>
       </ul></li>
       <li>
+    copyxnat.commands.ohif_command
+
+      <ul>
+        <li><a href="copyxnat.commands.ohif_command.html#module-copyxnat.commands.ohif_command">module</a>
+</li>
+      </ul></li>
+      <li>
     copyxnat.commands.show_command
 
       <ul>
@@ -196,6 +209,8 @@
         <li><a href="copyxnat.pyreporter.pyreporter.html#module-copyxnat.pyreporter.pyreporter">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui
 
@@ -203,8 +218,6 @@
         <li><a href="copyxnat.ui.html#module-copyxnat.ui">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui.copyxnat_command_line
 
@@ -430,6 +443,8 @@
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatProject.get_disallowed_project_ids">get_disallowed_project_ids() (copyxnat.xnat_backend.pyxnat_server.PyXnatProject static method)</a>
 </li>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.get_id">get_id() (copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
+</li>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.get_keywords">get_keywords() (in module copyxnat.utils.versioneer_version)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_or_create_child">get_or_create_child() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
@@ -492,6 +507,8 @@
         <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.HELP">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.HELP">(copyxnat.commands.export_command.ExportCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.HELP">(copyxnat.commands.ohif_command.OhifCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.HELP">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
@@ -578,6 +595,8 @@
 </li>
         <li><a href="copyxnat.commands.find_commands.html#module-copyxnat.commands.find_commands">copyxnat.commands.find_commands</a>
 </li>
+        <li><a href="copyxnat.commands.ohif_command.html#module-copyxnat.commands.ohif_command">copyxnat.commands.ohif_command</a>
+</li>
         <li><a href="copyxnat.commands.show_command.html#module-copyxnat.commands.show_command">copyxnat.commands.show_command</a>
 </li>
         <li><a href="copyxnat.pyreporter.html#module-copyxnat.pyreporter">copyxnat.pyreporter</a>
@@ -628,13 +647,15 @@
 </li>
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.NAME">(copyxnat.commands.export_command.ExportCommand attribute)</a>
 </li>
+        <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.NAME">(copyxnat.commands.ohif_command.OhifCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.NAME">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.NAMESPACES">NAMESPACES (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.NAMESPACES">NAMESPACES (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
+</li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CacheBox.new_cache">new_cache() (copyxnat.xnat.copy_cache.CacheBox method)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.next_progress">next_progress() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
@@ -653,10 +674,24 @@
 <h2 id="O">O</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.out_resource">out_resource (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.ohif_generate_session">ohif_generate_session() (copyxnat.xnat.xnat_interface.XnatExperiment method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.ohif_generate_session">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
+      </ul></li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.ohif_present">ohif_present() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.ohif_present">(copyxnat.xnat.xnat_interface.XnatServer method)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand">OhifCommand (class in copyxnat.commands.ohif_command)</a>
+</li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.out_resource">out_resource (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
+</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.out_resources">out_resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources method)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.output">output() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
@@ -671,6 +706,12 @@
 
       <ul>
         <li><a href="versioneer.html#versioneer.plus_or_dot">(in module versioneer)</a>
+</li>
+      </ul></li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.post_create">post_create() (copyxnat.xnat.xnat_interface.XnatExperiment method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.post_create">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
       </ul></li>
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.print_results">print_results() (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand method)</a>
@@ -699,10 +740,10 @@
       </ul></li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.projects">projects() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
-      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter">PyReporter (class in copyxnat.pyreporter.pyreporter)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter">PyReporter (class in copyxnat.pyreporter.pyreporter)</a>
+</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor">PyXnatAssessor (class in copyxnat.xnat_backend.pyxnat_server)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment">PyXnatExperiment (class in copyxnat.xnat_backend.pyxnat_server)</a>
@@ -737,6 +778,8 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.rebuild_catalog">rebuild_catalog() (copyxnat.xnat.xnat_interface.XnatExperiment method)</a>
+</li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.reconstruction">reconstruction (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.RECONSTRUCTION_ID_MAP">RECONSTRUCTION_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
@@ -793,6 +836,14 @@
         <li><a href="versioneer.html#versioneer.render_pep440_pre">(in module versioneer)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.request">request() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.request">(copyxnat.xnat.xnat_interface.XnatServer method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.request">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
+</li>
+      </ul></li>
       <li><a href="copyxnat.xnat.run_command.html#copyxnat.xnat.run_command.resolve_projects">resolve_projects() (in module copyxnat.xnat.run_command)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.resource">resource (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
@@ -805,6 +856,8 @@
         <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.run">(copyxnat.commands.copy_command.CopyCommand method)</a>
 </li>
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.run">(copyxnat.commands.export_command.ExportCommand method)</a>
+</li>
+        <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.run">(copyxnat.commands.ohif_command.OhifCommand method)</a>
 </li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.run">(copyxnat.commands.show_command.ShowCommand method)</a>
 </li>
@@ -837,12 +890,14 @@
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment.scans">scans() (copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment method)</a>
 </li>
-      <li><a href="copyxnat.xnat_backend.server_factory.html#copyxnat.xnat_backend.server_factory.ServerFactory">ServerFactory (class in copyxnat.xnat_backend.server_factory)</a>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.server">server (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.SESSION_ID_MAP">SESSION_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
+      <li><a href="copyxnat.xnat_backend.server_factory.html#copyxnat.xnat_backend.server_factory.ServerFactory">ServerFactory (class in copyxnat.xnat_backend.server_factory)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.SESSION_ID_MAP">SESSION_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
+</li>
       <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand">ShowCommand (class in copyxnat.commands.show_command)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.start_progress">start_progress() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
@@ -880,6 +935,8 @@
 </li>
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.USE_DST_SERVER">(copyxnat.commands.export_command.ExportCommand attribute)</a>
 </li>
+        <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.USE_DST_SERVER">(copyxnat.commands.ohif_command.OhifCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.USE_DST_SERVER">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
       </ul></li>
@@ -899,6 +956,8 @@
         <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.VERB">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.VERB">(copyxnat.commands.export_command.ExportCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.VERB">(copyxnat.commands.ohif_command.OhifCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.VERB">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
