--- a/genindex.html
+++ b/genindex.html
@@ -779,7 +779,11 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.rebuild_catalog">rebuild_catalog() (copyxnat.xnat.xnat_interface.XnatExperiment method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.rebuild_catalog">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
+      </ul></li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.reconstruction">reconstruction (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.RECONSTRUCTION_ID_MAP">RECONSTRUCTION_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
